# tmnre

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg
eggbox/: eggbox-10-c2sts.pickle  eggbox-sbi-non.pickle  eggbox-sbi-snle.pickle  eggbox-sbi-snpe.pickle  gen-eggbox.ipynb  plot-eggbox.ipynb  re2.ipynb  rot-nle-samples.pickle  rot-plot-eggbox.ipynb  rotated-eggbox.ipynb  rotated-eggbox.py  sbi-eggbox.py  sbi-plot-eggbox.ipynb  smnre-eggbox.ipynb
eggbox/rotated/: prep-rotated-eggbox.ipynb  rot-plot-eggbox.ipynb  rot-sbi-samples.pickle  rot-seq-samples.pickle  rot-snle-samples.pickle  rotated-eggbox.py
inference_sbibm/: compare.ipynb  metrics.py  run.py  summarize.py
inference_sbibm/config/: config.yaml
inference_sbibm/reports/: swyft_non_uniform_2d_results_budget.csv  swyft_uniform_2d_results_budget.csv
marginalize_sbibm/: calc_marginalized_c2st.py  marginal-c2st-summary.csv  summarize_marginalized_c2st.py
marginalize_sbibm/c2st_config/: config.yaml
physics/: CMB_TTTEEE.ipynb  obs.pt  obs2.pt
physics/chains/: 2021-05-03_500000__1.txt  2021-05-03_500000__2.txt  2021-05-03_500000__3.txt  2021-05-03_500000__4.txt  2021-05-03_500000__5.txt  2021-05-03_500000__6.txt  2021-05-03_500000__7.txt  2021-05-03_500000__8.txt  2021-05-04_500000_.paramnames  2021-05-04_500000__1.txt  2021-05-04_500000__2.txt  2021-05-04_500000__3.txt  2021-05-04_500000__4.txt  2021-05-04_500000__5.txt  2021-05-04_500000__6.txt  2021-05-04_500000__7.txt  2021-05-04_500000__8.txt  (+1 more)
tmnre/: io.py  marginalize.py  types.py
(+195594 files in other folders)
