[metadata]
name = tmnre
description = Truncated marginal neural ratio estimation based on swyft and amortized approximate ratio estimators.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License

[options]
packages = tmnre
zip_safe = False
python_requires = >=3.6
install_requires =
    numpy
    scipy
    pandas
    torch
    sbibm
    swyft
    toolz
    submitit
    tqdm
    ansible
    boto
    hiplot
    hydra-core>=1.0.3
    hydra-joblib-launcher>=1.1.0
    hydra-rq-launcher>=1.0.1
    hydra-submitit-launcher>=1.1.0
    jupyter
    supervisor
    black
    isort
    pre-commit
    flake8
    seaborn
    # pytest

[flake8]
max-line-length = 88
extend-ignore = E203, W503, E501, E266
